Changed mobile header css from fixed height to min-height, so in desktop we can use min-height:100% to make it stretch without the wrapping nav container element that was superfluous & align-self: stretch to override the parent flex alignment.

--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ nav {
     background-color: var(--Gallery-Mid-Grey);
     display: flex;
     width: 360px;
-    height: 210px;
+    min-height: 210px;
     padding: 20px 30px;
     flex-direction: column;
     align-items: flex-start;
@@ -220,20 +220,14 @@ footer > p {
 
     main {
         flex-direction: row;
-        /*align-items: flex-start;*/
-        align-items: stretch;
+        align-self: flex-start;
         min-width: 100%;
-    }
-
-    /* added extra nav container so I didn't have to use a fixed height to get it to match */
-    main > .nav-container {
-        display: flex;
-        flex: 0 1 auto;
     }
 
     nav {
         width: 225px;
-        height: 100%;
+        min-height: 100%;
+        align-self: stretch;
         padding: 20px;
         flex: 0 1 auto;
     }
